--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,20 +1,65 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
   <title>Iniciar Sesión</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <style>
+    body {
+      padding: 20px;
+      background-color: #f8f9fa;
+    }
+    h2 {
+      margin-bottom: 20px;
+    }
+    .error-message {
+      color: red;
+    }
+    .success-message {
+      color: green;
+    }
+    body {
+      background-color: #f8f9fa;
+    }
+    .container {
+      max-width: 600px;
+      margin-top: 50px;
+    }
+    h2 {
+      margin-bottom: 30px;
+    }
+
+    .form-label {
+      font-weight: bold;
+    }
+
+    .btn-primary, .btn-danger, .btn-success {
+      margin-top: 15px;
+    }
+
+    table {
+      background-color: #ffffff;
+    }
+
+  </style>
 </head>
 <body>
-<h2>Login</h2>
-<form th:action="@{/manage/login}" method="post">
-  <label>Usuario: <input type="text" name="username"/></label><br/>
-  <label>Contraseña: <input type="password" name="password"/></label><br/>
-  <button type="submit">Iniciar Sesión</button>
-</form>
-<div th:if="${param.error}">
-  <p style="color:red;">Credenciales incorrectas.</p>
+<div class="container">
+  <h2>Login</h2>
+  <form th:action="@{/manage/login}" method="post">
+    <label>Usuario: <input type="text" name="username"/></label><br/>
+    <label>Contraseña: <input type="password" name="password"/></label><br/>
+    <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
+  </form>
+  <div th:if="${param.error}" class="alert alert-danger mt-3">
+    Credenciales incorrectas.
+  </div>
+
+  <div th:if="${param.logout}" class="alert alert-success mt-3">
+    Sesión cerrada correctamente.
+  </div>
 </div>
-<div th:if="${param.logout}">
-  <p style="color:green;">Sesión cerrada correctamente.</p>
-</div>
+
 </body>
 </html>
