--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -47,7 +47,7 @@
 <body>
 <div class="container">
   <h2>Crear Nuevo Usuario</h2>
-  <form th:action="@{/manage/create}" method="post">
+  <form th:action="@{/manage/edit/{id}(id=${usuario.id})}" method="post">
     <input type="hidden" name="id" th:value="${usuario.id}" />
 
     <div class="mb-3">
@@ -78,7 +78,7 @@
       </select>
     </div>
 
-    <button type="submit" class="btn btn-primary">Crear Usuario</button>
+    <button type="submit" class="btn btn-primary">Editar Usuario</button>
   </form>
   <br/>
   <a class="btn btn-secondary" th:href="@{/manage/start}">Volver al listado</a>
